tests/sumo/extended/vaporizer/errors/begin_empty/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'begin' in definition of a vaporizer is empty.
Quitting (on error).
